Fix Color Icon on IOS

--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -121,4 +121,9 @@
   @include respond("lg") {
     display: none;
   }
+
+  &__icon {
+    color: var(--color-black);
+    fill: var(--color-black);
+  }
 }
